# detray

./: README.md
cmake/: detray-compiler-options-hip.cmake
tests/include/detray/test/device/hip/: CMakeLists.txt
tests/integration_tests/device/hip/: CMakeLists.txt
tests/unit_tests/device/hip/: CMakeLists.txt  detector_hip.hip
